@@ -1,114 +1,140 @@
 package br.com.alura.AluraFake.course;
 
-import br.com.alura.AluraFake.user.*;
+
+import br.com.alura.AluraFake.course.dto.NewCourseDTO;
+import br.com.alura.AluraFake.user.Role;
+import br.com.alura.AluraFake.user.User;
+import br.com.alura.AluraFake.user.UserRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(CourseController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class CourseControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
     @MockBean
     private UserRepository userRepository;
+
     @MockBean
     private CourseRepository courseRepository;
+
+    @MockBean
+    private CourseService courseService;
+
+    @MockBean
+    private CourseReportService courseReportService;
     @Autowired
     private ObjectMapper objectMapper;
 
     @Test
-    void newCourseDTO__should_return_bad_request_when_email_is_invalid() throws Exception {
-
+    void newCourseDTO_should_return_not_found_when_user_not_exists() throws Exception {
         NewCourseDTO newCourseDTO = new NewCourseDTO();
         newCourseDTO.setTitle("Java");
         newCourseDTO.setDescription("Curso de Java");
         newCourseDTO.setEmailInstructor("paulo@alura.com.br");
 
-        doReturn(Optional.empty()).when(userRepository)
-                .findByEmail(newCourseDTO.getEmailInstructor());
+        when(userRepository.findByEmail("paulo@alura.com.br"))
+                .thenReturn(Optional.empty());
 
         mockMvc.perform(post("/course/new")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
+                .andExpect(status().isNotFound());
     }
 
-
     @Test
-    void newCourseDTO__should_return_bad_request_when_email_is_no_instructor() throws Exception {
-
+    void newCourseDTO__should_return_forbidden_when_user_is_not_instructor() throws Exception {
         NewCourseDTO newCourseDTO = new NewCourseDTO();
-        newCourseDTO.setTitle("Java");
-        newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
+        newCourseDTO.setTitle("Angular");
+        newCourseDTO.setDescription("Curso de Angular");
+        newCourseDTO.setEmailInstructor("joao@alura.com.br");
+        User user = new User("Joao", "joao@alura.com.br", Role.STUDENT);
 
-        User user = mock(User.class);
-        doReturn(false).when(user).isInstructor();
-
-        doReturn(Optional.of(user)).when(userRepository)
-                .findByEmail(newCourseDTO.getEmailInstructor());
+        doReturn(Optional.of(user)).when(userRepository).findByEmail("joao@alura.com.br");
 
         mockMvc.perform(post("/course/new")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
+                .andExpect(status().isForbidden());
     }
 
     @Test
-    void newCourseDTO__should_return_created_when_new_course_request_is_valid() throws Exception {
-
+    void newCourseDTO__should_return_created_when_user_is_instructor() throws Exception {
         NewCourseDTO newCourseDTO = new NewCourseDTO();
-        newCourseDTO.setTitle("Java");
-        newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
+        newCourseDTO.setTitle("Banco de dados");
+        newCourseDTO.setDescription("Curso de Banco de dados");
+        newCourseDTO.setEmailInstructor("maria@alura.com.br");
 
-        User user = mock(User.class);
-        doReturn(true).when(user).isInstructor();
+        User user = new User("Maria", "maria@alura.com.br", Role.INSTRUCTOR);
 
-        doReturn(Optional.of(user)).when(userRepository).findByEmail(newCourseDTO.getEmailInstructor());
+        doReturn(Optional.of(user)).when(userRepository).findByEmail("maria@alura.com.br");
 
         mockMvc.perform(post("/course/new")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
                 .andExpect(status().isCreated());
-
-        verify(courseRepository, times(1)).save(any(Course.class));
     }
 
     @Test
-    void listAllCourses__should_list_all_courses() throws Exception {
-        User paulo = new User("Paulo", "paulo@alua.com.br", Role.INSTRUCTOR);
+    void getAllCourses_should_return_list_of_courses() throws Exception {
 
-        Course java = new Course("Java", "Curso de java", paulo);
-        Course hibernate = new Course("Hibernate", "Curso de hibernate", paulo);
-        Course spring = new Course("Spring", "Curso de spring", paulo);
+        Course course1 = new Course("Java Básico", "Curso Java", new User("Paulo", "paulo@alura.com.br", Role.INSTRUCTOR));
+        Course course2 = new Course("Spring Boot", "Curso Spring", new User("Maria", "maria@alura.com.br", Role.INSTRUCTOR));
 
-        when(courseRepository.findAll()).thenReturn(Arrays.asList(java, hibernate, spring));
+
+        when(courseRepository.findAll()).thenReturn(List.of(
+                new Course("Java Básico", "Curso Java", new User("Paulo", "paulo@alura.com.br", Role.INSTRUCTOR)),
+                new Course("Spring Boot", "Curso Spring", new User("Maria", "maria@alura.com.br", Role.INSTRUCTOR))
+        ));
 
         mockMvc.perform(get("/course/all")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].title").value("Java"))
-                .andExpect(jsonPath("$[0].description").value("Curso de java"))
-                .andExpect(jsonPath("$[1].title").value("Hibernate"))
-                .andExpect(jsonPath("$[1].description").value("Curso de hibernate"))
-                .andExpect(jsonPath("$[2].title").value("Spring"))
-                .andExpect(jsonPath("$[2].description").value("Curso de spring"));
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].title").value("Java Básico"))
+                .andExpect(jsonPath("$[1].title").value("Spring Boot"));
+    }
+
+    @Test
+    void reportCourses_should_return_course_report() throws Exception {
+        Long instructorId = 1L;
+        InstructorCourseReportResponse report = new InstructorCourseReportResponse(List.of(), 2L);
+        when(courseReportService.generate(instructorId)).thenReturn(report);
+
+        mockMvc.perform(get("/instructor/{id}/courses", instructorId)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.totalPublishedCourses").value(2));
+    }
+
+    @Test
+    void publishCourse_should_return_ok() throws Exception {
+        Long courseId = 1L;
+
+        doNothing().when(courseService).publishCourse(courseId);
+
+        mockMvc.perform(post("/course/{id}/publish", courseId)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+
+        verify(courseService, times(1)).publishCourse(courseId);
     }
 
 }
